# chrome-observer-jni

./: README.md  pom.xml
chrome-observer/: CMakeLists.txt  README.md
chrome-observer/include/: ApplicationObserver.h  ApplicationObserverWrapper.h
chrome-observer/lib/: libchromeobserver.dylib
chrome-observer/src/: ApplicationObserver.m  ApplicationObserverWrapper.mm
src/main/java/com/crossover/: App.java  ChromeObserver.java
